force-app/main/default/objects/RW_Registration_Challan__c/RW_Registration_Challan__c.object-meta.xml
<CustomObject>
    <label>SDR Payment Detail</label>
    <nameField>
        <displayFormat>SDR-{0000000}</displayFormat>
        <label>SDR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDR Payment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>