force-app/main/default/objects/RW_Registration_Challan__c/fields/RW_SDR_Instrument_Amount__c.field-meta.xml
<CustomField>
    <fullName>RW_SDR_Instrument_Amount__c</fullName>
    <label>Stamp Duty Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>