force-app/main/default/objects/RW_Registration_Challan__c/fields/RW_SDR_Instrument_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_SDR_Instrument_Date__c</fullName>
    <label>Stamp Duty Paid Date</label>
    <type>Date</type>
</CustomField>