force-app/main/default/objects/RW_Registration_Challan__c/fields/RW_SDR_Instrument_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_SDR_Instrument_Number__c</fullName>
    <label>Stamp Duty Instrument Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>